add state, changed style
Перенес роутинги; поправил стиль кнопки регистрации
Вынес все данные в state и прокинул их через пропсы

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -33,6 +33,7 @@
     width: 215px;
     height: 32px;
     background: #ADFF00;
+    border: none;
     border-radius: 7px;
 
     font-family: 'Golos Text', sans-serif;
