--- a/src/components/Elections/Elections.module.css
+++ b/src/components/Elections/Elections.module.css
@@ -12,7 +12,7 @@
 }
 
 .titelElections{
-    margin: 60px 60px 40px 60px;
+    margin: 60px 60px 10px 60px;
     color: #ffff;
     font-family: 'Golos Text', sans-serif;
     font-size: 36px;
@@ -34,6 +34,7 @@
     height: 29px;
 
     margin-top: 20px;
+    margin-bottom: 60px;
 }
 
 .electionsStatus h4{
@@ -44,5 +45,22 @@
     font-weight: 400;
     font-size: 24px;
     line-height: 120%;
+    color: #AAAAAA;
+}
+
+.timer{
+    width: 409px;
+    height: 29px;
+    margin-bottom: 40px;
+}
+
+.timer h4{
+    font-family: 'Golos Text', sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 120%;
+
+    margin: 0;
+
     color: #AAAAAA;
 }
