--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -28,21 +28,34 @@
 }
 
 .registration {
-    padding: 2px 15px 6px;
+    cursor: pointer;
 
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
     width: 215px;
     height: 32px;
     background: #ADFF00;
     border: none;
     border-radius: 7px;
+}
 
+.registration h5{
+    margin: 0;
     font-family: 'Golos Text', sans-serif;
     font-weight: 600;
     font-size: 18px;
     line-height: 21.6px;
+
 }
+
 .typeButton{
     margin-left: auto;
     margin-right: 20px;
     margin-top: 24px;
+}
+
+.typeButton a{
+    text-decoration: none;
 }
