add laptop adaptive

--- a/src/components/Elections/Candidate/Candidate.module.css
+++ b/src/components/Elections/Candidate/Candidate.module.css
@@ -1,14 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Golos+Text:wght@600&display=swap');
-
 .Candidate {
     display: flex;
 
-    width: 1280px;
+    width: 91.4%;
     max-height: 460px;
     background-color: #111111;
     border-radius: 20px;
 
-    margin-bottom: 20px;
+    margin: 0 auto 1.42%;
 }
 
 .text {
@@ -18,7 +17,7 @@
     padding: 0px;
     gap: 10px;
 
-    width: 1000px;
+    width: 78.125%;
     height: 79px;
 }
 
@@ -59,8 +58,8 @@
     align-content: center;
     justify-content: center;
 
-    min-width: 126px;
-    min-height: 33px;
+    width: 126px;
+    height: 33px;
 
     border: none;
     border-radius: 10px;
@@ -80,8 +79,12 @@
 }
 
 .check {
+    justify-self: end;
     cursor: pointer;
-    margin: 50px 50px;
+    display: flex;
+    align-items: flex-start;
+    justify-items: center;
+    margin-top: 50px;
 }
 
 .check_input {
