--- a/src/components/Elections/Elections.module.css
+++ b/src/components/Elections/Elections.module.css
@@ -1,63 +1,66 @@
 @import url('https://fonts.googleapis.com/css2?family=Golos+Text:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Golos+Text&display=swap');
-.Elections{
-    min-height: 732px;
-    min-width: 1400px;
+
+:root{
+    font-size: 100vw;
+}
+.Elections {
+    height: 732px;
+    width: 73%;
     background-color: #1E1E1E;
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 20px;
-    margin: 60px 260px 0px 260px;
+    margin: 60px auto 0;
+    padding-bottom: 2.083%;
 }
 
-.titelElections{
+.titelElections {
     margin: 60px 60px 10px 60px;
     color: #ffff;
     font-family: 'Golos Text', sans-serif;
-    font-size: 36px;
+    font-size: 1.875%;
 }
 
-.Candidates{
-
-}
-
-.electionsStatus{
+.electionsStatus {
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;
+
     padding: 0px;
     gap: 20px;
 
-    width: 1280px;
+    width: 66.666%;
     height: 29px;
 
-    margin-top: 20px;
-    margin-bottom: 60px;
+    margin: 20px auto 0px;
 }
 
-.electionsStatus h4{
-    width: 408px;
+.electionsStatus h4 {
+    margin: 0;
     height: 29px;
 
     font-family: 'Golos Text', sans-serif;
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.25%;
     line-height: 120%;
     color: #AAAAAA;
 }
 
-.timer{
-    width: 409px;
+.timer {
+    display: flex;
+    justify-content: center;
+    width: 66.666%;
     height: 29px;
     margin-bottom: 40px;
 }
 
-.timer h4{
+.timer h4 {
     font-family: 'Golos Text', sans-serif;
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.25%;
     line-height: 120%;
 
     margin: 0;
