--- a/src/components/Winners/Winners.module.css
+++ b/src/components/Winners/Winners.module.css
@@ -1,23 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Golos+Text:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Golos+Text&display=swap');
+:root{
+    font-size: 100vw;
+}
 .Winners{
-    min-width: 1400px;
+    width: 73%;
     min-height: 663px;
     background-color: #1E1E1E;
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 20px;
-    margin: 60px 260px 60px 260px;
+    margin: 60px auto;
 }
 
 .titelWinners{
     margin: 60px 60px 40px 60px;
     color: #ffff;
     font-family: 'Golos Text', sans-serif;
-    font-size: 36px;
+    font-size: 1.875%;
 }
 
-.Winner{
 
-}
