--- a/src/components/Elections/Elections.module.css
+++ b/src/components/Elections/Elections.module.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     align-items: center;
     border-radius: 20px;
-    margin: 60px auto 0;
+    margin: 140px auto 0;
     padding-bottom: 2.083%;
 }
 
@@ -66,4 +66,40 @@
     margin: 0;
 
     color: #AAAAAA;
+}
+
+/*320px*/
+@media screen and (max-width: 1024px){
+    .Elections{
+        margin: 20px auto 0;
+        width: 260px;
+        height: 1065px;
+        padding: 0;
+    }
+    .titelElections{
+        margin: 20px auto 0;
+        width: 220px;
+        height: 57px;
+
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 120%;
+
+        text-align: center;
+    }
+    .timer h4{
+        font-size: 10px;
+    }
+    .timer{
+        width: 171px;
+        height: 12px;
+        margin-top: 6px;
+        margin-bottom: 20px;
+    }
+    .electionsStatus{
+        margin-top: 0;
+    }
+    .electionsStatus h4{
+        font-size: 10px;
+    }
 }
