--- a/src/components/Winners/Winner/Winner.module.css
+++ b/src/components/Winners/Winner/Winner.module.css
@@ -97,3 +97,59 @@
 
     color: #FFFFFF;
 }
+
+/*320px*/
+@media screen and (max-width: 1024px) {
+    .Candidate {
+        position: relative;
+        width: 220px;
+        height: 320px;
+        flex-direction: column;
+        margin-bottom: 20px;
+    }
+
+    .photo {
+        width: 190px;
+        height: 190px;
+        margin: 49px 15px 15px;
+    }
+
+    .text {
+        margin: 0 15px 15px 15px;
+        width: 190px;
+        height: 51px;
+    }
+
+    .name {
+        margin: 0;
+        min-width: 129px;
+        max-height: 19px;
+
+        font-weight: 600;
+        font-size: 16px;
+    }
+
+    .vk {
+        width: 88px;
+        height: 24px;
+    }
+
+    .vk h5 {
+        font-size: 12px;
+    }
+    .date{
+        position: absolute;
+        top: 15px;
+        left: 15px;
+
+        width: 190px;
+        height: 19px;
+        text-align: center;
+    }
+    .date h4{
+        width: 190px;
+        height: 19px;
+        margin: 0;
+        font-size: 16px;
+    }
+}
