--- a/src/components/Elections/Elections.scss
+++ b/src/components/Elections/Elections.scss
@@ -13,8 +13,8 @@
         flex-direction: column;
         align-items: center;
 
-        width: 80%;
-        padding: 60px;
+        @include media(width, [260px, 260px, 80%]);
+        @include media(padding, [20px, 20px, 60px]);
         box-sizing: border-box;
 
         border-radius: 20px;
@@ -31,6 +31,7 @@
     &__timer {
         @include media(margin-top, [6px, 6px, 6px, 10px]);
 
+        text-align: center;
         color: #aaaaaa;
     }
 
