--- a/src/media-mixin.scss
+++ b/src/media-mixin.scss
@@ -4,6 +4,8 @@ $_screens: ('all', 600, 800, 1024, 1280, 1600, 1920);
         $value: nth($values, $i);
         $screen: nth($_screens, $i);
 
+        // Первое значение без медиа-запроса
+        // Повторяющиеся подряд-идущие значения схлопываются в один медиа-запрос
         @if $screen == 'all' {
             #{$property}: unquote(#{$value});
         } @else if ($value != nth($values, $i - 1)) {
