--- a/src/components/Registration/Registration.module.css
+++ b/src/components/Registration/Registration.module.css
@@ -46,11 +46,65 @@
 }
 
 .forms{
-    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px;
+    gap: 20px;
+
     width: 400px;
-    height: 172px;
+    height: 250px;
 }
 
-.forms div{
-    height: 49px;
+.form1{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 8px;
+
+    width: 400px;
+    height: 76px;
+}
+
+.form1 h5{
+    width: 213px;
+    height: 19px;
+
+    font-family: 'Golos Text', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 120%;
+
+    color: #AAAAAA;
+
+    margin: 0;
+}
+
+.form2{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 8px;
+
+    width: 400px;
+    height: 76px;
+}
+
+.form2 h5{
+    width: 213px;
+    height: 19px;
+
+    font-family: 'Golos Text', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 120%;
+
+    color: #AAAAAA;
+
+    margin: 0;
 }
