--- a/src/components/Candidate/Candidate.module.scss
+++ b/src/components/Candidate/Candidate.module.scss
@@ -9,6 +9,7 @@
     justify-content: space-between;
     flex-direction: row;
 
+    box-sizing: border-box;
     margin-bottom: 20px;
     padding: 20px;
 
@@ -16,9 +17,11 @@
     border-radius: 20px;
 
     @media screen and (max-width: 800px) {
-        align-items: flex-start;
         flex-direction: column;
+
+        max-width: 220px; // img width + left/right padding
         padding: 15px;
+        margin-right: 12px;
     }
 
     &:last-child {
@@ -68,7 +71,7 @@
     width: 100px;
 
     @media screen and (max-width: 800px) {
-        width: 220px;
+        width: 190px;
         max-width: 100%;
     }
 }
@@ -134,6 +137,7 @@
 }
 
 .check_box {
+    cursor: pointer;
     width: 40px;
     height: 40px;
 
@@ -149,11 +153,11 @@
 }
 
 .check_input:disabled:checked + .check_box {
-    cursor: default;
+    cursor: not-allowed;
 }
 
 .check_input:disabled + .check_box {
-    cursor: default;
+    cursor: not-allowed;
 }
 
 .winInfo {
