--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -20,7 +20,7 @@
         justify-content: space-between;
         align-items: center;
 
-        width: 80%;
+        @include media(width, [92%, 92%, 80%]);
     }
 
     &__logo-wrapper {
