--- a/src/components/Candidate/Candidate.module.scss
+++ b/src/components/Candidate/Candidate.module.scss
@@ -69,10 +69,13 @@
 .photo {
     display: block;
     width: 100px;
+    height: 100px;
 
     @media screen and (max-width: 800px) {
         width: 190px;
         max-width: 100%;
+        height: 190px;
+        max-height: 100%;
     }
 }
 
@@ -92,6 +95,8 @@
 }
 
 .vk {
+    width: 126px;
+    height: 33px;
     cursor: pointer;
 
     display: flex;
@@ -99,13 +104,12 @@
     align-content: center;
     justify-content: center;
 
-    padding: 10px 15px;
-
     border: none;
     border-radius: 10px;
 
     background: #adff00;
 
+    font-family: 'Golos Text', sans-serif;
     font-weight: 600;
     font-size: 18px;
     color: #1e1e1e;
@@ -121,6 +125,7 @@
     justify-items: center;
 
     margin-left: 20px;
+    margin-right: 30px;
 
     cursor: pointer;
 
